--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8888
+github.client.id=5ef1314640c129e68f62
+github.client.secret=6ba808b82f7820ce0c0b42085f3aec649f70eaef
+github.redirect.uri=http://localhost:8888/callback
