--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,7 @@ spring.datasource.username=sa
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.h2.Driver
 
+mybatis.configuration.map-underscore-to-camel-case=true
+##mybatis默认的驼峰标识是False，要设置为true
 #spring.thymeleaf.cache=false
 #spring.mvc.hiddenmethod.filter.enabled=true
