--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,8 +18,9 @@ spring.datasource.driver-class-name=org.h2.Driver
 ##h2.driver=org.h2.Driver,mysql.driver=MySQL Connector/J (ver. mysql-connector-java-8.0.25 (Revision: 08be9e9b4cba6aa115f9b27b215887af40b159e0), JDBC4.2)
 mybatis.configuration.map-underscore-to-camel-case=true
 ##mybatis默认的驼峰标识是False，要设置为true
-mybatis.type-aliases-package=life.majiang.community.model
+mybatis.type-aliases-package=life.majiang.community.mapper
 mybatis.mapper-locations=classpath:mapper/*.xml
+server.error.path
 
 
 #spring.thymeleaf.cache=false
